Modification page index

--- a/Page_2_world_wide_web.html
+++ b/Page_2_world_wide_web.html
@@ -18,7 +18,7 @@
     
     <p>
         Le Web n’est qu’une des applications d’Internet 
-        <a href="Page_1_Histoire_Internet.html" class="linkred">Histoire d'Internet</a>, distincte
+        <a href="index.html" class="linkred">Histoire d'Internet</a>, distincte
         d’autres applications comme le courrier électronique, la messagerie instantanée et le partage
         de fichiers en pair à pair. Le Web est inventé le 12 mars 1989 au CERN, à Meyrin, près de
         Genève par Tim Berners-Lee et le Belge Robert Cailliau plusieurs années après Internet. C'est
