--- a/Page_2_world_wide_web.html
+++ b/Page_2_world_wide_web.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
     <h1>World Wide Web</h1>
     <p>
         Le <strong>World Wide Web</strong> (litt. la « toile (d’araignée) mondiale », abrégé www ou le Web), le réseau
@@ -142,6 +143,7 @@ anonymous FTP&lt;/A&gt; , etc.&lt;/A&gt;
 </code>
 
 </pre>
+</main>
 
 </body>
 </html>
