modification des polices et couleurs

--- a/Page_2_world_wide_web.html
+++ b/Page_2_world_wide_web.html
@@ -42,7 +42,7 @@
         <figcaption> <br/> Historique du World Wide Web par Robert Cailliau.</figcaption>
     </figure>
 
-    <h2>Spécifications</h2>
+    <h2>Sp<span class="voyelle">é</span>cifications</h2>
 
     <h3>Abréviations</h3>
 
@@ -67,14 +67,13 @@
 
 <pre>
 <code>
-
 &lt;HEADER&gt;
 &lt;TITLE&gt;The World Wide Web project&lt;/TITLE&gt;
 &lt;NEXTID N="55"&gt;
 &lt;/HEADER&gt;
 &lt;BODY&gt;
-&lt;H1&gt;World Wide Web&lt;/H1&gt;The WorldWideWeb (W3) is a wide-area&lt;A
-NAME=0 HREF="WhatIs.html"&gt;
+&lt;H1&gt;World Wide Web&lt;/H1&gt;The WorldWideWeb (W3) is a wide-area&lt;
+A NAME=0 HREF="WhatIs.html"&gt;
 hypermedia&lt;/A&gt; information retrieval
 initiative aiming to give universal
 access to a large universe of documents.&lt;P&gt;
@@ -84,8 +83,8 @@ to this document, including an &lt;A
 NAME=24 HREF="Summary.html"&gt;executive
 summary&lt;/A&gt; of the project, &lt;A
 NAME=29 HREF="Administration/Mailing/Overview.html"&gt;Mailing lists&lt;/A&gt;
-, &lt;A NAME=30 HREF="Policy.html">Policy&lt;/A&gt; , November's &lt;A NAME=34 HREF="News/9211.html"&gt;W3 news&lt;A&gt; ,
-&lt;A
+, &lt;A NAME=30 HREF="Policy.html">Policy&lt;/A&gt; , November's 
+&lt;A NAME=34 HREF="News/9211.html"&gt;W3 news&lt;A&gt; , &lt;A
 NAME=41 HREF="FAQ/List.html">Frequently Asked Questions&lt;/A&gt; .
 &lt;DL&gt;
 &lt;DT&gt;&lt;A
@@ -139,10 +138,10 @@ NAME=49 HREF="LineMode/Defaults/Distribution.html"&gt;
 anonymous FTP&lt;/A&gt; , etc.&lt;/A&gt;
 &lt;/DL&gt;
 &lt;/BODY&gt;
-
 </code>
-
 </pre>
+
+
 </main>
 
 </body>
