--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Structurer un contenu HTML”</title>
     <link rel="stylesheet" href="style.css">
-    
+  
 </head>
 <body>
 
@@ -40,7 +40,7 @@
                 la bulle Internet.
             </p>
 
-        <h2>Chronologie sélective</h2>
+        <h2>Chronologie s<span class="voyelle">é</span>lective</h2>
             <table> 
                 <thead>
                 <tr> 
@@ -168,7 +168,7 @@
         <div class="bordureImage"> 
         <figure><img src="Images/image_server.jpg" alt="image d'un serveur" class="image"/>
             <figcaption> <br/> Fig.1 - Le premier serveur web, actuellement au musée du CERN, étiqueté « This machine is a
-            server. DO NOT POWER IT DOWN!! »" <br/>  
+            server. DO NOT POWER IT DOWN!! » <br/>  
             </figcaption>
         </figure>
         </div>
